.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Setting__mdt/Shiftmatch_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Shiftmatch Setting</label>
    <pluralLabel>Shiftmatch Settings</pluralLabel>
</CustomObject>