.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Setting__mdt/fields/Authorization__c.field-meta.xml
<CustomField>
    <fullName>Authorization__c</fullName>
    <label>Authorization</label>
    <length>128</length>
    <type>Text</type>
</CustomField>