.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Setting__mdt/fields/Full_Sync__c.field-meta.xml
<CustomField>
    <fullName>Full_Sync__c</fullName>
    <description>Number of syncs before a full sync is triggered</description>
    <label>Full Sync Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>