.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Setting__mdt/fields/Poll_Frequency_Mins__c.field-meta.xml
<CustomField>
    <fullName>Poll_Frequency_Mins__c</fullName>
    <label>Poll Frequency (Mins)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>