.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Setting__mdt/fields/Poll_Start_Time_UTC__c.field-meta.xml
<CustomField>
    <fullName>Poll_Start_Time_UTC__c</fullName>
    <inlineHelpText>Format HH:MI - eg. 15:30</inlineHelpText>
    <label>Poll Start Time (UTC)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>