.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Setting__mdt/fields/Requires_Resource_in_Shiftmatch__c.field-meta.xml
<CustomField>
    <fullName>Requires_Resource_in_Shiftmatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Resource in Shiftmatch</label>
    <type>Checkbox</type>
</CustomField>