.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Setting__mdt/fields/Shift_Type_Map__c.field-meta.xml
<CustomField>
    <fullName>Shift_Type_Map__c</fullName>
    <defaultValue>&apos;[{&quot;type&quot;: &quot;AM&quot;, &quot;from&quot;: &quot;06:00&quot;, &quot;to&quot;: &quot;12:00&quot;}, {&quot;type&quot;: &quot;PM&quot;, &quot;from&quot;: &quot;12:00&quot;, &quot;to&quot;: &quot;18:00&quot;}, {&quot;type&quot;: &quot;ND&quot;, &quot;from&quot;: &quot;18:00&quot;, &quot;to&quot;: &quot;06:00&quot;}]&apos;</defaultValue>
    <description>map shitt time to shift type - AM , PM and ND</description>
    <inlineHelpText>map shitt time to shift type - AM , PM and ND</inlineHelpText>
    <label>Shift Type Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>